# wirthx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  builddocs.sh  config.h.in  main.cpp  math
.github/workflows/: cmake.yml
cmake/: FindLLVM.cmake
docs/: markdown.xsl
rtl/: ctypes.pas  strings.pas  system.pas
src/: Lexer.cpp  Lexer.h  MacroParser.cpp  MacroParser.h  Parser.cpp  Parser.h  Parser2.cpp  Parser2.h  SourceLocation.cpp  SourceLocation.h  Token.h  compare.cpp  compare.h
src/ast/: ASTNode.cpp  ASTNode.h  AddressNode.cpp  AddressNode.h  ArrayAccessNode.cpp  ArrayAccessNode.h  ArrayAssignmentNode.cpp  ArrayAssignmentNode.h  ArrayInitialisationNode.cpp  ArrayInitialisationNode.h  BinaryOperationNode.cpp  BinaryOperationNode.h  BlockNode.cpp  BlockNode.h  BooleanNode.cpp  BooleanNode.h  BreakNode.cpp  BreakNode.h  CharConstantNode.cpp  CharConstantNode.h  ComparissionNode.h  ComparrisionNode.cpp  DoubleNode.cpp  DoubleNode.h  FieldAccessNode.cpp  FieldAccessNode.h  FieldAssignmentNode.cpp  FieldAssignmentNode.h  ForNode.cpp  ForNode.h  FunctionCallNode.cpp  FunctionCallNode.h  FunctionDefinitionNode.cpp  FunctionDefinitionNode.h  IfConditionNode.cpp  IfConditionNode.h  InputNode.cpp  InputNode.h  LogicalExpressionNode.cpp  LogicalExpressionNode.h  (+26 more)
src/ast/types/: FileType.cpp  FileType.h  RecordType.cpp  RecordType.h  StringType.cpp  StringType.h  VariableType.cpp  VariableType.h
src/compiler/: Compiler.cpp  Compiler.h  CompilerOptions.cpp  CompilerOptions.h  Context.cpp  Context.h  codegen.cpp  codegen.h  intrinsics.cpp  intrinsics.h
src/exceptions/: CompilerException.cpp  CompilerException.h
src/interpreter/: InterpreterContext.h  PascalArray.h  Stack.cpp  Stack.h  interpreter.cpp  interpreter.h
src/linker/: pascal_linker.h
src/linker/unix/: pascal_linker.cpp
src/linker/windows/: pascal_linker.cpp
src/lsp/: LanguageServer.cpp  LanguageServer.h
src/os/: command.h
src/os/unix/: command.cpp
src/os/windows/: command.cpp
testfiles/: hello.pas
tests/: CMakeLists.txt  compiler_test.cpp  interpreter_test.cpp  lexer_test.cpp
tests/errortests/: arrayaccess.pas  arrayaccess.txt  missing_return_type.pas  missing_return_type.txt  parsing_errors.pas  parsing_errors.txt  wrong_return_type.pas  wrong_return_type.txt
tests/projecteuler/: problem1.pas  problem10.pas  problem2.pas  problem3.pas  problem4.pas  problem4.txt  problem5.pas  problem6.pas  problem6.txt  problem7.pas  problem8.pas  problem9.pas  problem9.txt
tests/testfiles/: arraytest.pas  basicvec2.pas  basicvec2.txt  conditions.pas  conditions.txt  constantstest.pas  constantstest.txt  customint.pas  doubletest.pas  doubletest.txt  dynarray.pas  externalfunction.pas  externalfunction.txt  forloop.pas  forloop.txt  functions.pas  functions.txt  helloworld.pas  includetest.pas  logicalcondition.pas  logicalcondition.txt  math.pas  math.txt  pointer_test.pas  pointer_test.txt  positive_assert.pas  readfile.pas  repeatuntil.pas  repeatuntil.txt  rule110.pas  rule110.txt  singletest.pas  singletest.txt  stringcompare.pas  stringcompare.txt  stringconv.pas  stringconv.txt  stringtest.pas  stringtest.txt  testunit.pas  (+2 more)
tests/testfiles/stderr/: writetoerror.pas  writetoerror.txt
